<resources>
    <string name="app_name">Home</string>
    <string name="fragment_choose_alertdialog_title">Choose the fragment</string>
    <string name="html_appname">Html</string>
    <string name="curl_appname">Curl</string>
    <string name="intent_appname">Intent</string>
    <string name="webview_appname">WebView</string>
    <string name="urllist_appname">URLList</string>
    <string name="dict_appname">Dict</string>
    <string name="music_appname">Music</string>
    <string name="memo_appname">Memo</string>
    <string name="qr_appname">QRCode</string>
    <string name="preference_appname">Setting</string>
    <string name="exit_appname">Exit</string>
    <string name="hymmnos_appname">Hymmnos</string>
    <string name="serializer_appname">Serializer</string>
    <string name="html_actionbar">Html Capture</string>
    <string name="curl_actionbar">Curl GET/POST</string>
    <string name="intent_actionbar">Intent</string>
    <string name="webview_actionbar">WebView</string>
    <string name="urllist_actionbar">URL List</string>
    <string name="dict_actionbar">JuTemp\'s Dictionary</string>
    <string name="music_actionbar">Music 163 JuTemp</string>
    <string name="memo_actionbar">Memo</string>
    <string name="qr_actionbar">QRCode</string>
    <string name="preference_actionbar">Setting</string>
    <string name="exit_actionbar">Exit</string>
    <string name="hymmnos_actionbar">Hymmnos</string>
    <string name="serializer_actionbar">Serializer</string>
    <string name="html_hint_url">URL...</string>
    <string name="html_hint_filename">Filename...</string>
    <string name="html_ua_desc_android">User-Agent: Android</string>
    <string name="html_ua_desc_desktop">User-Agent: Desktop</string>
    <string name="html_capture">Capture</string>
    <string name="html_download">Download</string>
    <string name="curl_hostpath_hint">Host Path</string>
    <string name="curl_exec">Execute Curl</string>
    <string name="curl_addPostContent">Add a Key-Value</string>
    <string name="curl_remove">Remove</string>
    <string name="intent_exec">Execute Intent</string>
    <string name="intent_error">Intent Error.</string>
    <string name="urllist_add">Add A URL</string>
    <string name="urllist_dialog_textin_title">Type the text</string>
    <string name="urllist_dialog_confirm">Confirm</string>
    <string name="urllist_dialog_deleteall_title">Delete All?</string>
    <string name="urllist_dialog_delete_title">Delete?</string>
    <string name="urllist_dialog_delete">Delete</string>
    <string name="urllist_dialog_cancel">Cancel</string>
    <string name="urllist_dialog_modify_title">Modify?</string>
    <string name="urllist_dialog_modify">Modify</string>
    <string name="urllist_containsplit_error">The title can\'t contain the letter | .</string>
    <string name="urllist_dialog_title">Title</string>
    <string name="urllist_dialog_content">Content</string>
    <string name="urllist_move">move</string>
    <string name="urllist_delete">delete</string>
    <string name="dict_translate">Translate</string>
    <string name="dict_b">British Pronounce</string>
    <string name="dict_a">American Pronounce</string>
    <string name="music_desc_playlist">基于网页访问，目前仅支持下载歌单前十首歌</string>
    <string name="music_download">Download</string>
    <string name="music_song">Song</string>
    <string name="music_playlist">Playlist</string>
    <string name="memo_add">Add A Note</string>
    <string name="memo_dialog_textin_title">Type the text</string>
    <string name="memo_dialog_confirm">Confirm</string>
    <string name="memo_dialog_deleteall_title">Delete All?</string>
    <string name="memo_dialog_delete_title">Delete?</string>
    <string name="memo_dialog_delete">Delete</string>
    <string name="memo_dialog_cancel">Cancel</string>
    <string name="memo_dialog_modify_title">Modify?</string>
    <string name="memo_dialog_modify">Modify</string>
    <string name="memo_containsplit_error">The title can\'t contain the letter | .</string>
    <string name="memo_dialog_title">Title</string>
    <string name="memo_dialog_content">Content</string>
    <string name="memo_move">move</string>
    <string name="memo_delete">delete</string>
    <string name="qr_encode">Encode</string>
    <string name="qr_scan">Scan</string>
    <string name="hymmnos_trans">Trans</string>
    <string name="serializer_ser_hint">Content (kmon)</string>
    <string name="serializer_deser_hint">Serialized String</string>
    <string name="serializer_exec">Execute Serialize or Deserialize</string>
    <string name="serializer_deser_error">The string you want to deserialize can\'t be deserialize. It doesn\'t seems to be a serialized string.</string>
    <string name="preference_general">General</string>
    <string name="preference_start_title">StartActivity</string>
    <string name="preference_start_summary">Modify</string>
    <string name="preference_start_dialogtitle">Choose Start Activity</string>
    <string name="preference_mode_title">Mode</string>
    <string name="preference_mode_summaryoff">Slient</string>
    <string name="preference_mode_summaryon">Sound</string>
    <string name="preference_fontsize_title">FontSize</string>
    <string name="preference_fontsize_summary">Modify</string>
    <string name="preference_fontsize_dialogtitle">Choose Font Size</string>
    <string name="preference_clip_title">Clipboard</string>
    <string name="preference_clip_summaryoff">Not Clip to Clipboard</string>
    <string name="preference_clip_summaryon">Clip to Clipboard</string>
    <string name="preference_bootalarmmemo">Boot Alarm Memo</string>
    <string name="preference_bootalarmmemo_flag_title">Boot Alarm Memo\'s Flag</string>
    <string name="preference_bootalarmmemo_flag_summaryoff">Not Boot Alarm Memo</string>
    <string name="preference_bootalarmmemo_flag_summaryon">Boot Alarm Memo</string>
    <string name="preference_bootalarmmemo_content_title">Boot Alarm Memo\'s Content</string>
    <string name="preference_bootalarmmemo_dialog_title">Boot Alarm Memo\'s Content</string>
    <string name="preference_dialog_posi">Save</string>
    <string name="preference_dialog_nega">Cancel</string>
    <string name="preference_about">About</string>
    <string name="preference_about_title">About</string>
    <string name="preference_about_posi">OK</string>
    <string name="preference_about_dialog_message">Author: JuTemp\nQQ: 1839333864\n\nWelcome to contact me!</string>
    <string name="preference_about_dialog_message_copy">Copy QQ Number</string>
    <string name="preference_about_dialog_message_qqnumber" translatable="false">1839333864</string>
    <string name="preference_dict_appid">Type AppId</string>
    <string name="preference_dict_appkey">Type AppKey</string>
    <string name="preference_dict_appid_dialog_title">Type AppId</string>
    <string name="preference_dict_appkey_dialog_title">Type AppKey</string>
    <string name="marquee_exec">Execute</string>
    <string name="marquee_appname">Marquee</string>
    <string name="marquee_actionbar">Marquee</string>
    <string name="wuxibus_appname">Wuxibus</string>
    <string name="wuxibus_actionbar">Wuxibus</string>
    <string name="wuxibus_baselineinfolist_null">Request null routes.</string>
    <string name="wuxibus_textin_error">Request route id error.</string>
    <string name="wuxibus_search">Search</string>
    <string name="wuxibus_focus">The bus %1$s arrived at %2$s, which has still %3$d stops.</string>
    <string name="lx_appname">Lx</string>
    <string name="lx_actionbar">Lx</string>
    <string name="lx_long_label">Lx</string>
    <string name="lx_short_label">Lx</string>
    <string name="menu_shortcut_add">Add</string>
    <string name="menu_shortcut_del">Delete</string>
    <string name="menu_default_copy">Copy</string>
    <string name="menu_default_paste">Paste</string>
    <string name="menu_memo_import">Import</string>
    <string name="menu_memo_export">Export</string>
    <string name="menu_webview_url">URL</string>
    <string name="curl_default" translatable="false"><![CDATA[curl命令： $ curl <URL>]]></string>
    <string name="curl_post" translatable="false"><![CDATA[curl命令： $ curl -XPOST <URL> -d <DATA>]]></string>
    <string name="curl_header" translatable="false"><![CDATA[添加首部： $ curl <URL> -H <HEADER> -H ...]]></string>
    <string name="curl_download" translatable="false"><![CDATA[下载文件： $ cd . $ curl -O <FILE>]]></string>
    <string name="curl_download_" translatable="false"><![CDATA[下载文件并重命名： $ cd . $ curl -o <FILENAME> <URL>]]></string>
    <string name="curl_recover_download" translatable="false"><![CDATA[继续下载文件： $ curl -C - -O <FILENAME> <URL>]]></string>
    <string name="curl_redirect" translatable="false"><![CDATA[跟随重定向： $ curl -L <URL>]]></string>
    <string name="stringcompress_appname">StringCompress</string>
    <string name="stringcompress_exec">Execute Execute Compress or Expand</string>
    <string name="base64_exec">Execute Encode or Decode</string>
    <string name="stringcompress_textlong_hint">Content</string>
    <string name="stringcompress_textshort_hint">Compressed String</string>
    <string name="base64_content_hint">Content</string>
    <string name="base64_encoded_hint">Encoded String</string>
    <string name="preference_import_or_export">Import/Export</string>
    <string name="preference_import">Import</string>
    <string name="preference_export">Export</string>
    <string name="preference_id_general" translatable="false">pid_general</string>
    <string name="preference_id_startactivity" translatable="false">pid_startactivity</string>
    <string name="preference_id_dict" translatable="false">pid_dict</string>
    <string name="preference_id_dict_mode" translatable="false">pid_dict_mode</string>
    <string name="preference_id_dict_fontsize" translatable="false">pid_dict_fontsize</string>
    <string name="preference_id_dict_appid" translatable="false">pid_dict_appid</string>
    <string name="preference_id_dict_appkey" translatable="false">pid_dict_appkey</string>
    <string name="preference_id_bootalarmmemo" translatable="false">pid_bootalarmmemo</string>
    <string name="preference_id_bootalarmmemo_flag" translatable="false">pid_bootalarmmemo_flag</string>
    <string name="preference_id_bootalarmmemo_content" translatable="false">pid_bootalarmmemo_content</string>
    <string name="preference_id_importorexport" translatable="false">pid_importorexport</string>
    <string name="preference_id_import" translatable="false">pid_import</string>
    <string name="preference_id_export" translatable="false">pid_export</string>
    <string name="preference_id_about" translatable="false">pid_about</string>
    <string name="preference_id_about_detail" translatable="false">pid_about_detail</string>
    <string name="menu_ua_wechat">Wechat</string>
    <string name="menu_ua_qq">QQ</string>
    <string name="urlconvert_exec">0</string>
    <string name="urlconvert_textoriginal_hint">Original</string>
    <string name="urlconvert_textencoded_hint">Encoded</string>
    <string name="radixconvert_bin">Binary</string>
    <string name="radixconvert_oct">Octal</string>
    <string name="radixconvert_dec">Decimal</string>
    <string name="radixconvert_hex">Hexadecimal</string>
    <string name="radixconvert_exec">Convert</string>
    <string name="uuid_shortuuid">Short UUID</string>
    <string name="uuid_exec">EXEC</string>
    <string name="uuid_uuid_dash">UUID Dash</string>
    <string name="uuid_longuuid">Long uuid</string>
    <string name="uuid_uuid">UUID</string>
    <string name="nginx_localurl_update">Update</string>
    <string name="nginx_add">Add</string>
    <string name="nginx_localurl_hint">Address</string>
    <string name="overlaywindow_start_ow">Start Service</string>
    <string name="overlaywindow_stop_ow">Stop Service</string>
    <string name="overlaywindow_update">Update</string>
    <string name="preference_startactivity">Default Fragment</string>
</resources>