<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/preference_id_general"
        android:title="@string/preference_general">

        <Preference
            android:key="@string/preference_id_startactivity"
            android:summary="@string/preference_start_summary"
            android:title="@string/preference_startactivity" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/preference_id_dict"
        android:title="@string/dict_actionbar">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@null"
            android:key="@string/preference_id_dict_mode"
            android:summaryOff="@string/preference_mode_summaryoff"
            android:summaryOn="@string/preference_mode_summaryon"
            android:title="@string/preference_mode_title" />

        <ListPreference
            android:dialogTitle="@string/preference_fontsize_dialogtitle"
            android:entries="@array/activity_list_fontsize"
            android:entryValues="@array/activity_list_fontsize_number"
            android:key="@string/preference_id_dict_fontsize"
            android:summary="@string/preference_fontsize_summary"
            android:title="@string/preference_fontsize_title" />

        <Preference
            android:key="@string/preference_id_dict_appid"
            android:title="@string/preference_dict_appid" />

        <Preference
            android:key="@string/preference_id_dict_appkey"
            android:title="@string/preference_dict_appkey" />

        <!-- <Preference id="id_appid|id_appkey"/> are modified <EditTextPrefrence/>. -->

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/preference_id_bootalarmmemo"
        android:title="@string/preference_bootalarmmemo">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_id_bootalarmmemo_flag"
            android:summaryOff="@string/preference_bootalarmmemo_flag_summaryoff"
            android:summaryOn="@string/preference_bootalarmmemo_flag_summaryon"
            android:title="@string/preference_bootalarmmemo_flag_title" />

        <EditTextPreference
            android:key="@string/preference_id_bootalarmmemo_content"
            android:title="@string/preference_bootalarmmemo_content_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/preference_id_importorexport"
        android:title="@string/preference_import_or_export">

        <Preference
            android:key="@string/preference_id_import"
            android:title="@string/preference_import" />

        <Preference
            android:key="@string/preference_id_export"
            android:title="@string/preference_export" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/preference_id_about"
        android:title="@string/preference_about">

        <Preference
            android:key="@string/preference_id_about_detail"
            android:title="@string/preference_about_title" />

    </PreferenceCategory>

</PreferenceScreen>
