<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        style="@style/cm"
        android:text="@string/curl_default" />

    <com.google.android.material.button.MaterialButton
        style="@style/cm"
        android:text="@string/curl_post"/>

    <com.google.android.material.button.MaterialButton
        style="@style/cm"
        android:text="@string/curl_header"/>

    <com.google.android.material.button.MaterialButton
        style="@style/cm"
        android:text="@string/curl_download"/>

    <com.google.android.material.button.MaterialButton
        style="@style/cm"
        android:text="@string/curl_download_"/>

    <com.google.android.material.button.MaterialButton
        style="@style/cm"
        android:text="@string/curl_recover_download"/>

    <com.google.android.material.button.MaterialButton
        style="@style/cm"
        android:text="@string/curl_redirect"/>

</androidx.appcompat.widget.LinearLayoutCompat>
