<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uuid_uuid_dash"
        style="@style/c"
        android:hint="@string/uuid_uuid_dash" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uuid_uuid"
        style="@style/c"
        android:hint="@string/uuid_uuid" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uuid_longuuid"
        style="@style/c"
        android:hint="@string/uuid_longuuid" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/uuid_shortuuid"
        style="@style/c"
        android:hint="@string/uuid_shortuuid" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uuid_exec"
        style="@style/cm"
        android:text="@string/uuid_exec" />

</androidx.appcompat.widget.LinearLayoutCompat>