<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/radixconvert_bin"
        style="@style/c"
        android:hint="@string/radixconvert_bin"
        android:lines="1"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/radixconvert_oct"
        style="@style/c"
        android:hint="@string/radixconvert_oct"
        android:lines="1"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/radixconvert_dec"
        style="@style/c"
        android:hint="@string/radixconvert_dec"
        android:lines="1"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/radixconvert_hex"
        style="@style/c"
        android:hint="@string/radixconvert_hex"
        android:lines="1"
        android:singleLine="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/radixconvert_exec"
        style="@style/cm"
        android:text="@string/radixconvert_exec"
        android:textAllCaps="false" />

</androidx.appcompat.widget.LinearLayoutCompat>

