<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edin"
        style="@style/c"
        android:hint="@string/html_hint_url"
        android:lines="1"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edinpath"
        style="@style/c"
        android:hint="@string/html_hint_filename"
        android:lines="1"
        android:singleLine="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ua"
        style="@style/cm"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cap"
        style="@style/cm"
        android:text="@string/html_capture" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dwn"
        style="@style/cm"
        android:text="@string/html_download" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edout"
        style="@style/cm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</androidx.appcompat.widget.LinearLayoutCompat>
