<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_choose_webview"
        android:text="@string/webview_appname"
        style="@style/cm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_choose_urllist"
        android:text="@string/urllist_appname"
        style="@style/cm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_choose_qr"
        android:text="@string/qr_appname"
        style="@style/cm" />

</androidx.appcompat.widget.LinearLayoutCompat>