<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/urlconvertTextOriginal"
        style="@style/c"
        android:hint="@string/urlconvert_textoriginal_hint"
        android:maxLines="10" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/urlconvertTextEncoded"
        style="@style/c"
        android:hint="@string/urlconvert_textencoded_hint"
        android:maxLines="10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/urlconvertExec"
        style="@style/cm"
        android:text="@string/urlconvert_exec" />

</androidx.appcompat.widget.LinearLayoutCompat>