<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/serializer_deser"
        style="@style/c"
        android:hint="@string/serializer_deser_hint"
        android:lines="1"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/serializer_ser"
        style="@style/c"
        android:hint="@string/serializer_ser_hint"
        android:lines="1"
        android:singleLine="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/serializer_exec"
        style="@style/cm"
        android:text="@string/serializer_exec"
        android:textAllCaps="false" />

</androidx.appcompat.widget.LinearLayoutCompat>
	
