<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/overlaywindow_start_ow"
        style="@style/cm"
        android:text="@string/overlaywindow_start_ow" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/overlaywindow_stop_ow"
        style="@style/cm"
        android:text="@string/overlaywindow_stop_ow" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/overlaywindow_edittext"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/overlaywindow_update"
            style="@style/cm"
            android:text="@string/overlaywindow_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>