<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nginx_add"
        style="@style/cm"
        android:layout_height="20pt"
        android:text="@string/nginx_add" />

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/cm"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nginx_localurl"
            style="@style/c"
            android:layout_width="0px"
            android:layout_weight="1"
            android:hint="@string/nginx_localurl_hint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nginx_localurl_update"
            style="@style/cm"
            android:layout_width="wrap_content"
            android:text="@string/nginx_localurl_update" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.JuTemp.Home.MyView.DragListView
        android:id="@+id/nginxDragListView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</androidx.appcompat.widget.LinearLayoutCompat>
